[project]
name = "asyncio_ddd"
requires-python = "<=3.11"
version = "0.0.0"


#########################
######### Ruff ##########
#########################

[tool.ruff]
target-version = "py311"
line-length = 88

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "PL",  # pylint
    "ARG", # flake8-unused-arguments
]

ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.pylint]
max-args = 25 # Maximum number of arguments for function/method

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
] # https://stackoverflow.com/a/74701417/9485417


#########################
######### Mypy ##########
#########################

[tool.mypy]

plugins = ["sqlalchemy.ext.mypy.plugin"]

strict = true

exclude = ["venv"]

# to avoid Duplicate module named "x"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    # We only check test clases, mothers and utils
    "tests.*.unit.*",
    "tests.*.integration.*",
    "tests.*.acceptance.*",

    "asyncio_ddd.*.versions.*",
]
ignore_errors = true


#########################
######## Pytest #########
#########################
[tool.pytest.ini_options]
env = [
    "D:APP_ENVIRONMENT=TEST",
    "D:USER_REPOSITORY_TYPE=FAKE",
    "D:DOMAIN_EVENT_BUS_TYPE=FAKE",
    "D:ALEMBIC_CONFIG=asyncio_ddd/shared/infrastructure/persistence/alembic.ini",
]
markers = ["unit", "integration", "acceptance"]

addopts = [
    "tests",
    "--cov-report=xml:output/coverage/coverage.xml",
    "--cov=asyncio_ddd",
    "--junitxml=output/tests/tests.xml",
    "-v",
    "--color=yes",
    "--durations=10",
    "--pythonwarnings=error::sqlalchemy.exc.SAWarning", # to detect problems in migrations
    "--test-alembic",
]

python_files = "test_*.py"
python_functions = "test_* should_*"
pythonpath = "."


#########################
####### Coverage ########
#########################

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError()", "if TYPE_CHECKING:"]
