
[project]
name = "asyncio-ddd"
requires-python = ">=3.12,<4.0"
version = "0.1.0"
description = "⚡ Example python project using asyncio and DDD patterns"
authors = [{ name = "franciscorode", email = "fran_rode@hotmail.com" }]
readme = "README.md"
dependencies = [
    # Domain entities
    "pydantic (==2.10.4)",
    # Database 
    "sqlalchemy[asyncio] (==2.0.36)",
    "asyncpg (==0.30.0)",
    "alembic (==1.14.0)",
    # Environment
    "python-dotenv (==1.0.1)",
    # DI
    "dependency-injector (==4.45.0)",
    # API
    "fastapi (==0.115.6)",
    "sqladmin (==0.20.1)",
    "uvicorn (==0.34.0)",
    # Events (rabbitmq)
    "aio-pika (==9.5.4)",
]

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.6"
mypy = "1.14.1"
pre-commit = "4.0.1"


[tool.poetry.group.test.dependencies]
pytest = "8.3.4"
pytest-cov = "6.0.0"
pytest-env = "1.1.5"
pytest-asyncio = "0.25.2"
pytest-alembic = "0.11.1"
faker = "33.3.0"
httpx = "0.28.1"          # # fastapi testclient


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


#########################
######### Ruff ##########
#########################

[tool.ruff]
target-version = "py311"
line-length = 88

lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "PL",  # pylint
    "ARG", # flake8-unused-arguments
]

lint.ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.lint.pylint]
max-args = 25 # Maximum number of arguments for function/method

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
] # https://stackoverflow.com/a/74701417/9485417


#########################
######### Mypy ##########
#########################

[tool.mypy]

plugins = ["sqlalchemy.ext.mypy.plugin"]

strict = true

exclude = ["venv"]

# to avoid Duplicate module named "x"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    # We only check test clases, mothers and utils
    "tests.*.unit.*",
    "tests.*.integration.*",
    "tests.*.acceptance.*",
]
ignore_errors = true


#########################
######## Pytest #########
#########################
[tool.pytest.ini_options]
env = [
    "D:APP_ENVIRONMENT=TEST",
    "D:USER_REPOSITORY_TYPE=FAKE",
    "D:DOMAIN_EVENT_BUS_TYPE=FAKE",
    "D:ALEMBIC_CONFIG=asyncio_ddd/shared/infrastructure/persistence/alembic.ini",
]
markers = ["unit", "integration", "acceptance"]

addopts = [
    "tests",
    "--cov-report=xml:output/coverage/coverage.xml",
    "--cov=asyncio_ddd",
    "--junitxml=output/tests/tests.xml",
    "-v",
    "--color=yes",
    "--durations=10",
    "--pythonwarnings=error::sqlalchemy.exc.SAWarning", # to detect problems in migrations
    "--test-alembic",
]

python_files = "test_*.py"
python_functions = "test_* should_*"
pythonpath = "."


#########################
####### Coverage ########
#########################

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError()", "if TYPE_CHECKING:"]
